--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <a href="https://itunes.apple.com/ca/app/the-milepost-tour-guide/id642554870?mt=8">
                                 The Milepost Tour Guide
                             </a> v1.0.  
-                            An navigation app about road trips of Alaska and Western Canada.
+                            A navigation app about road trips of Alaska and Western Canada.
                         </li>
                         <li>Built a java program that extracts high-value geographic information from "The MILEPOST" magazine.</li>
                     </div>
