--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="row subsection">
-                        <div class="emph col">Startup</div>
+                        <div class="emph col">Startup - Miaoshi Technology Co., Ltd</div>
                         <div class="col-right light">Jan 2015 - Feb 2017</div>
                     </div>
                     <ul class = "desc">
@@ -50,12 +50,12 @@
                             Lead iOS developer in a startup company based in Shenzhen China.
                         </li>
                         <li>
-                            Built and Released 
+                            Built and released iOS client
                             <a href="https://itunes.apple.com/us/app/quan-li-shi/id1140426882?ls=1&mt=8">圈里事</a> 
-                            v1.0 in September 2016, a social media platform for friend circles.
+                            v1.0, a social media platform for friend circles.
                         </li>
                         <li>
-                            My work involves full product development lifecycle from design development to deployment.
+                            Involved full application developement life cycle in an agile environment. 
                         </li>
                     </ul>
                 </div>
@@ -72,7 +72,7 @@
                         <div class="col-right light">May 2015 - April 2016</div>
                     </div>
                     <ul class="desc">
-                        <li>Provided 2nd and 3rd tier technical support for corporate systems used across Northern Health. </li>
+                        <li>Provided technical support for corporate systems used across Northern Health. </li>
                         <li>Conducted effective systems analysis, monitoring and support to maintain and improve system reliability.</li>
                     </ul>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="section-text col-right">
                     <div class="row">
                         <div class="col">
-                            <h3>Instructor</h3>
+                            <h3>iOS Instructor</h3>
                         </div>
                     </div>
                     <div class="row subsection">
@@ -92,7 +92,7 @@
                     <ul class="desc">
                         <li>Course: CPSC 299 - Mobile App Programming (iOS).</li>
                         <li>
-                            Topics: iOS SDK, Objective-c, OOP, Core Foundation, CoreData, Multi-Threading (GCD), Networking, etc.
+                            Topics: iOS SDK, Objective-C, OOP, MVC, Core Foundation, Core Data, Multi-Threading (GCD), Networking, etc.
                         </li>
                         
                     </ul>
@@ -115,10 +115,10 @@
                             Built and Released 
                             <a href="https://itunes.apple.com/ca/app/the-milepost-tour-guide/id642554870?mt=8">
                                 The Milepost Tour Guide
-                            </a> v1.0.  
-                            A navigation app about road trips of Alaska and Western Canada.
+                            </a> 
+                            v1.0. A navigation app about road trips of Alaska and Western Canada.
                         </li>
-                        <li>Built a java program that extracts high-value geographic information from "The MILEPOST" magazine.</li>
+                        <li>Built a Java program using Regular Expression that extracts high-value geographic information from The MILEPOST magazine.</li>
                     </div>
 
                     <div>
@@ -137,11 +137,11 @@
                         <div class="col-right light">September 2013 - May 2015</div>
                     </div>
                     <div class="desc">
-                        "Packing Equal Circles In A Damaged Square" - An algorithm for a hard problem
+                        Published "Packing Equal Circles In A Damaged Square" - An algorithm for a hard problem
                     </div>
                     <div class="col light">
                         <a href="http://ieeexplore.ieee.org/document/7280846/">
-                            Published In 2015 International Joint Conference on Neural Networks (IJCNN)
+                            In 2015 International Joint Conference on Neural Networks (IJCNN)
                         </a>
                     </div>
                 </div>
