update vidao info

--- a/index.html
+++ b/index.html
@@ -32,13 +32,22 @@
                     </div>
                     <ul class="desc">
                         <li>
-                            Lead iOS developer in a startup company based in Surrey, BC. 
-                            Provided architectural and technical leadership to the iOS team behind 
-                            <a href="https://itunes.apple.com/ca/app/vidao/id1144335108" target="_blank">Vidao Messenger </a>
-                            iOS client.
+                            Lead role. Provided architectural improvement and technical leadership to the iOS team behind 
+                            <a href="https://itunes.apple.com/ca/app/vidao/id1144335108" target="_blank">Vidao Messenger </a> app.
                         </li>
                         <li>
-                            My main duty includes feature development, code review, app distribution
+                            My main duty includes feature development, code review, app distribution. Currently working on v2.0 with major upgrades.
+                        </li>
+                         <li>
+                            App Remarks: Mixed Obj-C &amp Swift project. Real-time messaging with WebSocket. Real-time note collaboration with Firebase. Real-time video/audio call with WebRTC.
+                        </li>
+                         <li>
+                            Development Tools: 
+                            <a href="https://cocoapods.org/" target="_blank">Cocoapods</a> (Obj-C),
+                            <a href="https://cocoapods.org/" target="_blank">Carthage</a> (Swift),  
+                            <a href="https://github.com/facebook/SocketRocket">SocketRocket</a>,                            
+                            <a href="https://github.com/SwiftGen/SwiftGen">SwiftGen</a>,            
+                            <a href="https://get.fabric.io/">Fabric</a>.            
                         </li>
                     </ul>
                 </div>
