--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a href="https://itunes.apple.com/ca/app/vidao/id1144335108" target="_blank">Vidao Messenger </a> app.
                         </li>
                         <li>
-                            My main duty includes feature development, code review, app distribution. Currently working on v2.0 with major upgrades.
+                            My main duty includes feature development, code review &amp version control, app distribution.
                         </li>
                          <li>
                             App Remarks: Mixed Obj-C &amp Swift project. Real-time messaging with WebSocket. Real-time note collaboration with Firebase. Real-time video/audio call with WebRTC.
