--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row subsection">
                         <div class="emph col">Vidao Messenger Inc.</div>
-                        <div class="col-right light">March 2017 - Now</div>
+                        <div class="col-right light">March 2017 - November 2017</div>
                     </div>
                     <ul class="desc">
                         <li>
