--- a/index.html
+++ b/index.html
@@ -21,9 +21,35 @@
             <div class="section row">
                 <h2 class="col">Work Experience</h2>
                 <div class="section-text col-right">
+                  <div class="row">
+                      <div class="col">
+                          <h3>Senior iOS Developer</h3>
+                      </div>
+                  </div>
+                  <div class="row subsection">
+                      <div class="emph col">Q.I. Leap Inc.</div>
+                      <div class="col-right light">Jan 2018 - Current</div>
+                  </div>
+                  <ul class="desc">
+                      <li>
+                        Design and implement new features for the iOS app, I also take part in implementing endpoints for our Node API server. 
+                      </li>
+                      <li>
+                        App Remarks: MVVM with Reactive Swift. Test Driven Development and Playground Driven Development. 
+                      </li>
+                       <li>
+                        App Remarks: Mixed Obj-C &amp Swift project. Real-time messaging with WebSocket. Real-time note collaboration with Firebase. Real-time video/audio call with WebRTC.
+                      </li>
+                       <li>
+                        Dev Tools: Swiftlint, Bitrise, XVim, Fabric, ReactiveSwift   
+                      </li>
+                  </ul>
+              </div>
+
+                <div class="section-text col-right">
                     <div class="row">
                         <div class="col">
-                            <h3>iOS Developer</h3>
+                            <h3>Lead iOS Developer</h3>
                         </div>
                     </div>
                     <div class="row subsection">
@@ -32,7 +58,7 @@
                     </div>
                     <ul class="desc">
                         <li>
-                            Lead role. Provided architectural improvement and technical leadership to the iOS team behind 
+                            Provided architectural improvement and technical leadership to the iOS team behind 
                             <a href="https://itunes.apple.com/ca/app/vidao/id1144335108" target="_blank">Vidao Messenger </a> app.
                         </li>
                         <li>
