--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                       </div>
                   </div>
                   <div class="row subsection">
-                      <div class="emph col">Q.I. Leap Inc.</div>
+                      <div class="emph col">FIND Innovation Labs Inc.</div>
                       <div class="col-right light">Jan 2018 - Current</div>
                   </div>
                   <ul class="desc">
