--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="section-text col-right">
                   <div class="row">
                       <div class="col">
-                          <h3>Senior iOS Developer</h3>
+                          <h3>Senior iOS Developer. Backend Dev Lead</h3>
                       </div>
                   </div>
                   <div class="row subsection">
