--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Tony Zhuang - Resume</title>
+        <title>Xinyi Zhuang - Resume</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Source+Sans+Pro:400,400i" rel="stylesheet">
     <body>
         <div class="page">
             <!-- ######### 联系方式 ###########  -->
             <div class="section row">
-                <h1 class="col"><span style="font-weight:700">Tony</span> Zhuang</h1>
+                <h1 class="col"><span style="font-weight:700">Xinyi</span> Zhuang</h1>
                 <div class="contact-info col-right">
                     <div>Phone: 778-929-4688</div>
                     <div>Github: <a href="https://github.com/yingmu52" target="_blank">@yingmu52</a></div>
