--- a/index.html
+++ b/index.html
@@ -20,10 +20,29 @@
             <!-- ######### 工作经验 ###########  -->
             <div class="section row">
                 <h2 class="col">Work Experience</h2>
+
                 <div class="section-text col-right">
                   <div class="row">
                       <div class="col">
-                          <h3>Senior iOS Developer & Backend Dev Lead</h3>
+                          <h3>Backend & DevOps Lead</h3>
+                      </div>
+                  </div>
+                  <div class="row subsection">
+                      <div class="emph col">FIND Innovation Labs Inc.</div>
+                      <div class="col-right light">Jan 2019 - Current</div>
+                  </div>
+                  <ul class="desc">
+                      <li>Maintain one of our backend servers (Parse Server) for our Merchant Portal and Mobile Apps. Helped Improve stability by applying Test-Driven Development.</li>
+                      <li>Redesign and Implement a brand new backend infrastructure with AWS Cloudformation and ECS. Reduced AWS Bill from 50K down to 3K for 30+ servers.</li>
+                      <li>Maintain all deployment jobs in our Jenkin server.</li>
+                      <li>Helped us create an actual staging environment :) and it can switch to simulate multiple production environments.</li>
+                  </ul>
+              </div>
+
+                <div class="section-text col-right">
+                  <div class="row">
+                      <div class="col">
+                          <h3>Senior iOS Developer</h3>
                       </div>
                   </div>
                   <div class="row subsection">
