cleanup some poor spec

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             <div class="section row">
                 <h1 class="col"><span style="font-weight:700">Xinyi</span> Zhuang</h1>
                 <div class="contact-info col-right">
-                    <div>Phone: 778-929-4688</div>
-                    <div>Github: <a href="https://github.com/yingmu52" target="_blank">@yingmu52</a></div>
-                    <div>yingmu52@gmail.com</div>
+                    <div>Phone: +1 778-929-4688</div>
+                    <div>Email: yingmu52@gmail.com</div>
+                    <div><a href="https://www.linkedin.com/in/xinyi-zhuang-869ba9132/" target="_blank">LinkedIn</a></div>
+                    <div><a href="https://github.com/yingmu52" target="_blank">Github</a></div>
                 </div>
             </div>
 
@@ -24,7 +25,7 @@
                 <div class="section-text col-right">
                   <div class="row">
                       <div class="col">
-                          <h3>Backend & DevOps Lead</h3>
+                          <h3>Backend & DevOps Engineer</h3>
                       </div>
                   </div>
                   <div class="row subsection">
@@ -131,71 +132,6 @@
                             <a href="https://travis-ci.org/">Travis CI</a>.
                         </li>
                     </ul>
-                </div>
-
-
-                <div class="section-text col-right">
-                    <div class="row">
-                        <div class="col">
-                            <h3>Application Technical Analyst</h3>
-                        </div>
-                    </div>
-                    <div class="row subsection">
-                        <div class="emph col">Northern Health</div>
-                        <div class="col-right light">May 2015 - April 2016</div>
-                    </div>
-                    <ul class="desc">
-                        <li>Provided technical support for corporate systems used across Northern Health. </li>
-                        <li>Conducted effective systems analysis, monitoring, and support to maintain and improve system reliability.</li>
-                    </ul>
-                </div>
-
-                <div class="section-text col-right">
-                    <div class="row">
-                        <div class="col">
-                            <h3>iOS Instructor</h3>
-                        </div>
-                    </div>
-                    <div class="row subsection">
-                        <div class="emph col">
-                            University of Northern British Columbia
-                        </div>
-                        <div class="col-right light">Summer 2014</div>
-                    </div>
-                    <ul class="desc">
-                        <li>Course: CPSC 299 - Mobile App Programming (iOS).</li>
-                        <li>
-                            Topics: iOS SDK, Objective-C, OOP, MVC, Core Foundation, Core Data, Multi-Threading (GCD), Networking, etc.
-                        </li>
-                        
-                    </ul>
-                </div>
-
-                 <div class="section-text col-right">
-                    <div class="row">
-                        <div class="col">
-                            <h3>iOS Developer</h3>
-                        </div>
-                    </div>
-                    <div class="row subsection">
-                        <div class="emph col">
-                            Angler's Atlas
-                        </div>
-                        <div class="col-right light">November 2012 - May 2014</div>
-                    </div>
-                    <div class="desc">
-                        <li>
-                            Built and Released 
-                            <a href="https://itunes.apple.com/ca/app/the-milepost-tour-guide/id642554870?mt=8" target="_blank">
-                                The Milepost Tour Guide
-                            </a> 
-                            v1.0. A navigation app about road trips of Alaska and Western Canada.
-                        </li>
-                        <li>Built a Java program using Regular Expression that extracts high-value geographic information from The MILEPOST magazine.</li>
-                    </div>
-
-                    <div>
-                    </div>
                 </div>
             </div>
 
